Desenvolvimento de estilos do componente main

--- a/pokedex-project/src/app/app.component.html
+++ b/pokedex-project/src/app/app.component.html
@@ -1,13 +1,8 @@
 <app-navbar></app-navbar>
 
 <app-main nomePokemon="pidgey"></app-main>
-<app-main nomePokemon="poliwrath"></app-main>
-<app-main nomePokemon="zapdos"></app-main>
-<app-main nomePokemon="weedle"></app-main>
-<app-main nomePokemon="gengar"></app-main>
-<app-main nomePokemon="oddish"></app-main>
-<app-main nomePokemon="onix"></app-main>
-<app-main nomePokemon="spearow"></app-main>
+<app-main nomePokemon="charmander"></app-main>
+
 
 
 <router-outlet></router-outlet>
