--- a/pokedex-project/src/app/main/main.component.html
+++ b/pokedex-project/src/app/main/main.component.html
@@ -1,14 +1,18 @@
-<div>
-    {{nomePokemon}}
-    <img src = {{urlImagem}}/>
-    
-    <ul>
-        <li *ngFor="let tipo of tiposPokemon">
-            {{tipo}}
-        </li>
+<div id="container">
+    <div id="imagem">
+        <img src = {{urlImagem}}/>
+    </div>
+    <div id="conteudo">
+        <p id="nome"><span>nº{{idPokemon}} </span>{{nomePokemon}}</p>
+    <ul style="padding:0;">
+        <div style="display:inline-block;" *ngFor="let tipo of tiposPokemon">
+            <li style="display:inline-block;" [ngClass]="[tipo,'tipo']">
+                    {{tipo | traduzTipo}}
+            </li>
+        </div>
     </ul>
 
     Altura: {{alturaPokemon}}
     Peso: {{pesoPokemon}}
-
+    </div>
 </div>
