--- a/pokedex-project/src/app/app.component.html
+++ b/pokedex-project/src/app/app.component.html
@@ -1,8 +1,3 @@
-<app-navbar></app-navbar>
-
-<app-main nomePokemon="pidgey"></app-main>
-<app-main nomePokemon="charmander"></app-main>
-
-
-
+<app-search-bar></app-search-bar>
+<app-poke-grid></app-poke-grid>
 <router-outlet></router-outlet>
