--- a/pokedex-project/src/app/main/main.component.scss
+++ b/pokedex-project/src/app/main/main.component.scss
@@ -6,14 +6,35 @@
 
 #container {
     display: flex;
-    width: 80%;
+    width: 70%;
     height:150px;
+    margin: 20px auto 5px auto;
+    border: 2px solid #808080;
+    border-radius: 5px 5px 50px 5px;
+}
+
+#conteudo-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    position: relative;
+    right: 30px;
+
+}
+
+#texto {
+    width: 70%;
+    height: 100px;
     margin: 0 auto;
+    border: 2px solid #808080;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 #nome {
     font-weight: bold;
     font-size: 20px;
+    margin-bottom: 5px;
 }
 
 #imagem img{
