--- a/src/componentes/main/main.component.scss
+++ b/src/componentes/main/main.component.scss
@@ -7,28 +7,53 @@
 #container {
     display: flex;
     width: 70%;
-    height:150px;
     margin: 20px auto 5px auto;
-    border: 2px solid #808080;
     border-radius: 5px 5px 50px 5px;
+    justify-content: space-between;
 }
 
-#conteudo-container {
+#nome-pokemon {
+    margin: 0px;
+}
+
+#descricao-pokemon{
+    margin: 0;
+}
+
+#tipo-pokemon {
+    margin: 15px 0px;
+}
+
+#num-pokemon {
     display: flex;
-    width: 100%;
-    justify-content: center;
-    position: relative;
-    right: 30px;
-
+    margin-top: 7px;
 }
 
-#texto {
+#conteudo-pokemon {
     width: 70%;
-    height: 100px;
     margin: 0 auto;
-    border: 2px solid #808080;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 50px;
+    padding: 20px 50px;
+    background-color: white;
+}
+
+#conteudo {
+    padding-top: 15px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#nomes-dados-container {
+    width: 20%;
+    display: flex;
+    flex-flow: column wrap;
+}
+
+#valores-dados-container {
+    width: 60%;
+    display: flex;
+    padding-left: 4px;
+    flex-flow: column wrap;
 }
 
 #nome {
@@ -37,8 +62,26 @@
     margin-bottom: 5px;
 }
 
-#imagem img{
-    width:150px;
+#imagem-pokemon img{
+    width:300px;
+    margin: 0 auto;
+    display: block;
+}
+
+#imagem-pokemon {
+    margin: 0 auto;
+}
+
+#main-nav {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.nav-item {
+    border-width: 0px 0px 2px 0px;
+    border-color: black;
+    border-style: solid;
 }
 
 .tipo {
@@ -56,6 +99,10 @@
     background-color: #79A4FF;
 }
 
+.flying-background {
+    background-color: rgb(94, 135, 223);
+}
+
 .normal {
     border-radius: 30px;
     width:50px;
@@ -70,6 +117,10 @@
     padding: 3px;
     text-align: center;
     background-color: #FA5543;
+}
+
+.fire-background {
+    background-color: rgb(216, 67, 51);
 }
 
 .grass {
