--- a/src/componentes/main/main.component.html
+++ b/src/componentes/main/main.component.html
@@ -1,5 +1,5 @@
 
-<div *ngIf="tiposPokemon.length === 1" id="background" [ngClass]="tiposPokemon[0]+'-background'">
+<div [ngClass]="tiposPokemon[0]+'-background'">
 
 <div>
     <header id="container">
@@ -27,20 +27,20 @@
 
 <div id="conteudo-pokemon">
         <nav id="main-nav">
-            <div class="nav-item">
-                <p>Sobre</p>
+            <div id="sobre" (click)="mudarFocoNavItem($event)" [ngClass]="navItemSelecionado === 'sobre' ? 'navItemSelecionado' : null">
+                Sobre
             </div>
-            <div class="nav-item">
-                <p>Status base</p>
+            <div id="status" (click)="mudarFocoNavItem($event)" [ngClass]="navItemSelecionado === 'status' ? 'navItemSelecionado' : null">
+                Status base
             </div>
-            <div class="nav-item">
-                <p>Evolução</p>
+            <div id="evolucao" (click)="mudarFocoNavItem($event)" [ngClass]="navItemSelecionado === 'evolucao' ? 'navItemSelecionado' : null">
+                Evolução
             </div>
-            <div class="nav-item">
-                <p>Ataques</p>
+            <div id="ataque" (click)="mudarFocoNavItem($event)" [ngClass]="navItemSelecionado === 'ataque' ? 'navItemSelecionado' : null">
+                Ataques
             </div>
         </nav>
-        <div id="conteudo">
+        <div *ngIf="navItemSelecionado === 'sobre'" id="sobre" class="conteudo">
             <div>
                 <p style="margin-top:5px;margin-bottom:0px;">{{textoPokemon}}</p>
             </div>
@@ -60,69 +60,21 @@
                 </p>
             </div>
         </div>
-    </div>
-
-</div>
-
-<div *ngIf="tiposPokemon.length > 1" id="background" [ngClass]="tiposPokemon[1]+'-background'">
-    <div>
-            <header id="container">
-                <div>
-                    <h1 id="nome-pokemon">{{nomePokemon}}</h1>
-                    <p id="descricao-pokemon">{{descricaoPokemon}}</p>
-                    <ul id="tipo-pokemon" style="padding:0;">
-                            <div style="display:inline-block;" *ngFor="let tipo of tiposPokemon">
-                                <li style="display:inline-block;" [ngClass]="[tipo,'tipo']">
-                                        {{tipo | traduzTipo}}
-                                </li>
-                            </div>
-                    </ul>
-                </div>        
-                <div id="num-pokemon">
-                    <p style="height: 10px; margin:0">#{{idPokemon}}</p>
-                </div>
-            </header>
-        
-            <div id="imagem-pokemon">
-                <img src = {{urlImagem}}/>
-            </div>    
-        </div>
-        
-        
-        <div id="conteudo-pokemon">
-            <nav id="main-nav">
-                <div class="nav-item">
-                    <p>Sobre</p>
-                </div>
-                <div class="nav-item">
-                    <p>Status base</p>
-                </div>
-                <div class="nav-item">
-                    <p>Evolução</p>
-                </div>
-                <div class="nav-item">
-                    <p>Ataques</p>
-                </div>
-            </nav>
-            <div id="conteudo">
-                <div>
-                    <p style="margin-top:5px;margin-bottom:0px;">{{textoPokemon}}</p>
-                </div>
-                <div id="nomes-dados-container">
-                    <p>Altura:</p>
-                    <p>Peso:</p>
-                    <p>Habilidades:</p>
-                </div>
-                <div id="valores-dados-container">
-                    <p>{{alturaPokemon | paraCentimetros}}</p>
-                    <p>{{pesoPokemon | paraQuilogramas}}kg</p>
-                    <p>
-                        <span *ngFor="let habilidade of habilidadesPokemon">
-                            <span *ngIf="habilidadesPokemon[habilidadesPokemon.length-1].ability.name !== habilidade.ability.name"> {{habilidade.ability.name}}, </span>
-                            <span *ngIf="habilidadesPokemon[habilidadesPokemon.length-1].ability.name === habilidade.ability.name">{{habilidade.ability.name}}</span>        
-                        </span>
-                    </p>
-                </div>
+        <div *ngIf="navItemSelecionado === 'status'" id="status" class="conteudo">
+            <div>
+                Isso aqui é o status
             </div>
         </div>
+        <div *ngIf="navItemSelecionado === 'evolucao'" id="status" class="conteudo">
+            <div>
+                Isso aqui é a evolução
+            </div>
+        </div>
+        <div *ngIf="navItemSelecionado === 'ataque'" id="status" class="conteudo">
+            <div>
+                Isso aqui é o ataque
+            </div>
+        </div>
+    </div>
+
 </div>
