--- a/src/componentes/poke-grid/poke-grid.component.html
+++ b/src/componentes/poke-grid/poke-grid.component.html
@@ -1,6 +1,9 @@
-<div class="container">
-  <div (click) = "abrirDetalhesPokemon($event)" *ngFor="let pokemon of listaPokemon" class="card">
-    <img  src = {{pokemon.sprites.front_default}}>
-    <p><span>{{pokemon.id}} - </span>{{pokemon.name}}</p>
+<div>
+  <div class="container">
+    <div (click) = "abrirDetalhesPokemon($event)" *ngFor="let pokemon of listaPokemon" class="card">
+      <img  src = {{pokemon.sprites.front_default}}>
+      <p><span>{{pokemon.id}} - </span>{{pokemon.name}}</p>
+    </div>
   </div>
+  <button (click)="carregarMaisPokemon()">Carregar mais</button>
 </div>
