Adicionando gradiente em tela de Pokemon individual

--- a/src/componentes/main/main.component.html
+++ b/src/componentes/main/main.component.html
@@ -1,5 +1,4 @@
-<div [ngClass]="tiposPokemon[0]+'-background'">
-
+<div #background [ngClass]="tiposPokemon[0] + ' ' + tiposPokemon[1] + ' ' + 'gradient'">
   <div>
     <header id="container">
       <div>
